--- a/config/nav/navigation.yaml
+++ b/config/nav/navigation.yaml
@@ -9,7 +9,7 @@ amcl:
     alpha3: 0.2
     alpha4: 0.2
     alpha5: 0.2
-    base_frame_id: "base_footprint"
+    base_frame_id: "base_link"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
@@ -279,7 +279,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "playground.yaml"
+    yaml_filename: "map.yaml"
 
 map_saver:
   ros__parameters:
