--- a/maps/map.yaml
+++ b/maps/map.yaml
@@ -1,7 +1,7 @@
-image: map.pgm
+image: map_1643104577.pgm
 mode: trinary
 resolution: 0.05
-origin: [-5.1, -7.23, 0]
+origin: [-5.18, -7.75, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
