--- a/config/nav/navigation.yaml
+++ b/config/nav/navigation.yaml
@@ -223,6 +223,13 @@ global_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
+        #bumper:
+        #  topic: /mobile_base/sensors/bumper_pointcloud
+        #  marking: true
+        #  clearing: false
+        #  min_obstacle_height: 0.0
+        #  max_obstacle_height: 0.15
+        #  data_type: PointCloud2
       voxel3d_layer_realsense:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
