--- a/config/nav/nav2_params.yaml
+++ b/config/nav/nav2_params.yaml
@@ -26,7 +26,7 @@ amcl:
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
     resample_interval: 1
-    robot_model_type: "nav2_amcl::DifferentialMotionModel"
+    robot_model_type: "differential"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
@@ -55,14 +55,16 @@ bt_navigator:
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
+    enable_groot_monitoring: True
+    groot_zmq_publisher_port: 1666
+    groot_zmq_server_port: 1667
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
     # nav2_bt_navigator/navigate_to_pose_w_replanning_and_recovery.xml
     # nav2_bt_navigator/navigate_through_poses_w_replanning_and_recovery.xml
     # They can be set here or via a RewrittenYaml remap from a parent launch file to Nav2.
     plugin_lib_names:
     - nav2_compute_path_to_pose_action_bt_node
-    #- nav2_compute_path_through_poses_action_bt_node
-    #- nav2_smooth_path_action_bt_node
+    - nav2_compute_path_through_poses_action_bt_node
     - nav2_follow_path_action_bt_node
     - nav2_back_up_action_bt_node
     - nav2_spin_action_bt_node
@@ -84,14 +86,14 @@ bt_navigator:
     - nav2_transform_available_condition_bt_node
     - nav2_time_expired_condition_bt_node
     - nav2_distance_traveled_condition_bt_node
-    #- nav2_single_trigger_bt_node
+    - nav2_single_trigger_bt_node
     - nav2_is_battery_low_condition_bt_node
-    #- nav2_navigate_through_poses_action_bt_node
+    - nav2_navigate_through_poses_action_bt_node
     - nav2_navigate_to_pose_action_bt_node
-    #- nav2_remove_passed_goals_action_bt_node
-    #- nav2_planner_selector_bt_node
-    #- nav2_controller_selector_bt_node
-    #- nav2_goal_checker_selector_bt_node
+    - nav2_remove_passed_goals_action_bt_node
+    - nav2_planner_selector_bt_node
+    - nav2_controller_selector_bt_node
+    - nav2_goal_checker_selector_bt_node
 
 bt_navigator_rclcpp_node:
   ros__parameters:
@@ -289,10 +291,6 @@ planner_server_rclcpp_node:
   ros__parameters:
     use_sim_time: True
 
-smoother_server:
-  ros__parameters:
-    use_sim_time: True
-
 recoveries_server:
   ros__parameters:
     costmap_topic: local_costmap/costmap_raw
@@ -307,7 +305,7 @@ recoveries_server:
       plugin: "nav2_recoveries/Wait"
     global_frame: odom
     robot_base_frame: base_link
-    transform_tolerance: 0.1
+    transform_timeout: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
