--- a/config/kobuki/kobuki_node_params.yaml
+++ b/config/kobuki/kobuki_node_params.yaml
@@ -8,7 +8,7 @@ kobuki_ros_node:
     cmd_vel_timeout_sec: 0.6
     odom_frame: odom
     base_frame: base_footprint
-    publish_tf: false
+    publish_tf: true
     use_imu_heading: true
     wheel_left_joint_name: wheel_left_joint
     wheel_right_joint_name: wheel_right_joint
